subprojects/swen430/src/test/resources/tests/valid/StringAssign_Valid_4.while
void main() {
    string foo = "hello";
    foo[0] = "baz"[2];
    print foo;
}

