subprojects/swen430/src/test/resources/tests/invalid/StringAssign_Invalid_4.while
void main() {
    string foo = "hello";
    foo[0] = "zb";
    print foo;
}

